Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
None
-
4.7.1
-
None
-
Qt4.7.2 RC
Mobility 1.1.1
Description
RelTestRound2:
Steps to reproduce:
1. Install application to the Nokia 5230/5250
2. Launch the application.
3. Check the application screen
Expeced result: The application runs well
Actual result: The application launched with mess screen, because of too big fonts.
Works ok for example in N8.
Also works ok in 5250 wtih Qt 4.6.3
Attachments
Issue Links
- depends on
-
QTBUG-18154 Symbian's QPixmap::logicalDpi[X\Y]() incorrectly returns MAXINT.
-
- Closed
-