Fix for wrong dpi metrics for raster pixmaps on Symbian.

The original implementation relied on SizeInTwips() for the underlying
bitmap which unfortunately returns 0, leading to incorrect results
from QPixmap::logicalDpiX/Y(). This caused issues in text rendering
onto pixmaps (QTBUG-17628). This fix changes QS60PixmapData to use a
slightly different metrics() implementation (the one VG and GL
PixmapData are using).

Task-number: QTBUG-18154
Reviewed-by: Jani Hautakangas
(cherry picked from commit 48629ab39aa4e20b21a359dc251569a98606983d)